internal/tree_sitter_grammars/twig/test/corpus/directives.txt
==================
Empty template
==================

---

(template)

==================
Content one line
==================
Lorem ipsum
---

(template
  (html_content))

==================
Content two line
==================
Lorem ipsum

---

(template
  (html_content))

==================
Content with curly brace
==================
Lorem { ipsum
---

(template
  (html_content)
  (content))

==================
Comment single line
==================
{# сomment #}
---

(template
  (comment))

==================
Comment multi line
==================
{# note: disabled template because we no longer use this
  {% for user in users %}
    ...
  {% endfor %}
#}
---

(template
  (comment))

==================
Сontent сomment content
==================
Lorem {# сomment #} ipsum
---

(template
  (html_content)
  (comment)
  (html_content))

==================
Comment content  Comment
==================
{# сomment #} Lorem  {# сomment #}
---

(template
  (comment)
  (html_content)
  (comment))

==================
Inline comments
==================
{{
    # this is an inline comment
    "Hello World"|upper
    # this is an inline comment
}}
---

(template
  (output
    (inline_comment)
    (filter_expression
      (string)
      (function))
    (inline_comment)))

==================
Inline comments 2
==================
{{
    {
        # this is an inline comment
        fruit: 'apple', # this is an inline comment
        color: 'red', # this is an inline comment
    }|join(', ')
}}
---

(template
  (output
    (filter_expression
      (object
        (inline_comment)
        (pair
          (variable)
          (string))
        (inline_comment)
        (pair
          (variable)
          (string))
        (inline_comment))
      (function)
      (arguments
        (string)))))

==================
Output directive
==================
{{ user }}
---

(template
  (output
    (variable)))
